tests/errors/Channel.send_expects.n
async fn bad_send() {
    ch := Channel<int>();
    await ch.send("hello");
}

fn main() {
}
